Link para compartilhar

--- a/index.html
+++ b/index.html
@@ -22,6 +22,37 @@
       content="Casamento de Thayrone Dornelas e Thalita Rabelo - 15 de Novembro de 2025 - Igreja São Leonardo, Paracatu-MG"
     />
 
+    <!-- Open Graph -->
+    <meta
+      property="og:title"
+      content="Thayrone & Thalita - 15 de Novembro 2025"
+    />
+    <meta
+      property="og:description"
+      content="Casamento de Thayrone Dornelas e Thalita Rabelo — informações, trilha sonora e lista de presentes."
+    />
+    <meta
+      property="og:image"
+      content="https://ysbaerftptetchetcljv.supabase.co/storage/v1/object/public/wedding-photos/WhatsApp%20Image%202025-08-09%20at%2014.31.18.jpeg"
+    />
+    <meta property="og:url" content="https://seu-dominio.com/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Thayrone & Thalita - 15 de Novembro 2025"
+    />
+    <meta
+      name="twitter:description"
+      content="Casamento de Thayrone Dornelas e Thalita Rabelo — informações, trilha sonora e lista de presentes."
+    />
+    <meta
+      name="twitter:image"
+      content="https://ysbaerftptetchetcljv.supabase.co/storage/v1/object/public/wedding-photos/WhatsApp%20Image%202025-08-09%20at%2014.31.18.jpeg"
+    />
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
