--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       property="og:image"
       content="https://ysbaerftptetchetcljv.supabase.co/storage/v1/object/public/wedding-photos/WhatsApp%20Image%202025-08-09%20at%2014.31.18.jpeg"
     />
-    <meta property="og:url" content="https://seu-dominio.com/" />
+    <meta property="og:url" content="https://thalitaethayrone.com.br/" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter -->
