New adjust on linK

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     />
     <meta
       name="twitter:description"
-      content="Casamento de Thayrone Dornelas e Thalita Rabelo — informações, trilha sonora e lista de presentes."
+      content="Casamento de Thayrone Dornelas e Thalita Rabelo — informações, trilha sonora, nossa história em fotos e lista de presentes."
     />
     <meta
       name="twitter:image"
